...
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="13dp"
        android:background="@drawable/button_main_style"
        android:text="signup"
        android:textColor="@color/colorPrimaryWhite" />
</FrameLayout>
